log/build_2025-07-24_10-12-05/tello_control/stderr.log
  File "/home/roboticslab/rise/install/tello_control/lib/python3.12/site-packages/tello_control/control_node.py", line 194
    plt.plot(range(len(vx))), vx, color='blue', label='Filtered Vx', linestyle='-')
                                                                                  ^
SyntaxError: unmatched ')'

